fixed overflowing text

--- a/css/_feedcontent.scss
+++ b/css/_feedcontent.scss
@@ -3,7 +3,7 @@
 }
 .feed-content{
     padding:10px 10px 0 10px;
-    width: 100%;
+    width: 550px;
     display:grid;
     grid-template-rows:35px;
     grid-template-columns: 20px auto auto;
@@ -137,7 +137,7 @@
             }
         }
         .text{
-            width:495px;
+            width:100%;
             justify-content: center;
             align-items: center;
             font-size: 13px;
